--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 120px;
-  font-family: 'Montserrat', sans-serif;
-  background-color: whitesmoke;
+  font-family: "Special Elite", cursive;
+  background-color: #c4c4c4;
 }
 
 .todo {
@@ -23,7 +23,9 @@ body {
 .todo .header {
   padding: 40px;
   border-radius: 5px 5px 0 0;
-  background-image: linear-gradient(340deg, #045de9 0%, #09c6f9 100%);
+  background-image: url(../img/todo-lists-5238324_1280.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .todo .header .header__title {
@@ -40,6 +42,7 @@ body {
   border-radius: 5px;
   color: #4f525c;
   background-color: whitesmoke;
+  font-family: "Special Elite", cursive;
 }
 
 .todo .header .header__add-btn {
@@ -48,6 +51,7 @@ body {
   border-radius: 5px;
   color: #0254a1;
   background-color: whitesmoke;
+  font-family: "Special Elite", cursive;
   text-transform: uppercase;
   cursor: pointer;
   transition: background-color .3s, color .3s;
@@ -129,6 +133,7 @@ body {
   width: 800px;
   color: whitesmoke;
   background-color: #4f525c;
+  font-family: "Special Elite", cursive;
   border-radius: 5px;
 }
 
@@ -156,6 +161,7 @@ body {
   border-radius: 5px;
   color: #4f525c;
   background-color: whitesmoke;
+  font-family: "Special Elite", cursive;
 }
 
 .popup .popup__popup-body .popup__popup-btn {
@@ -168,6 +174,7 @@ body {
   color: #1a1a1a;
   background-color: whitesmoke;
   text-transform: uppercase;
+  font-family: "Special Elite", cursive;
   cursor: pointer;
   transition: background-color .3s, color .3s;
 }
