--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,4 +5,4 @@ $dark-blue-color: rgb(2, 84, 161);
 $light-color: rgb(245, 245, 245);
 $delete-color: tomato;
 $edit-color:rgb(15, 179, 69);
-$font-Elite : 'Special Elite', cursive;
+$font-Elite : 'Orbitron', sans-serif;
