--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 120px;
-  font-family: "Special Elite", cursive;
+  font-family: "Orbitron", sans-serif;
   background-color: #c4c4c4;
 }
 
@@ -54,7 +54,7 @@ body {
   border-radius: 5px;
   color: #4f525c;
   background-color: whitesmoke;
-  font-family: "Special Elite", cursive;
+  font-family: "Orbitron", sans-serif;
 }
 
 @media (max-width: 545px) {
@@ -69,7 +69,7 @@ body {
   border-radius: 5px;
   color: #0254a1;
   background-color: whitesmoke;
-  font-family: "Special Elite", cursive;
+  font-family: "Orbitron", sans-serif;
   text-transform: uppercase;
   cursor: pointer;
   transition: background-color .3s, color .3s;
@@ -151,7 +151,7 @@ body {
   width: 800px;
   color: whitesmoke;
   background-color: #4f525c;
-  font-family: "Special Elite", cursive;
+  font-family: "Orbitron", sans-serif;
   border-radius: 5px;
 }
 
@@ -185,7 +185,7 @@ body {
   border-radius: 5px;
   color: #4f525c;
   background-color: whitesmoke;
-  font-family: "Special Elite", cursive;
+  font-family: "Orbitron", sans-serif;
 }
 
 .popup__popup-btn {
@@ -198,7 +198,7 @@ body {
   color: #1a1a1a;
   background-color: whitesmoke;
   text-transform: uppercase;
-  font-family: "Special Elite", cursive;
+  font-family: "Orbitron", sans-serif;
   cursor: pointer;
   transition: background-color .3s, color .3s;
 }
